[tool.poetry]
name = "seeya-server"
version = "0.1.0"
description = ""
authors = ["최병욱 <esc5221@gmail.com>", "Minkyu Lee <whizkyu@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
django-extensions = "^3.2.3"
django-ninja = "^1.1.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
